--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
     "server": "nodemon index.js",
     "febriansyah-adi-putra": "npm run start --prefix febriansyah-adi-putra",
     "build": "npm run build --prefix febriansyah-adi-putra",
-    "dev": "concurrently \"npm run server\" \"npm run febriansyah-adi-putra\""
+    "start": "concurrently \"npm run server\" \"npm run febriansyah-adi-putra\""
   },
   "keywords": [],
   "author": "",
